# startup-evaluator

./: Dockerfile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml
